[dfa-assist] Turn off graying out on code edits (IDEA-296575)
GitOrigin-RevId: 51d92e9abc186efe5a34a773d0dd2b0343c4f7ca